# iris-api

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  feature_request.md
app/: main.py  utils.py
app/core/: model_registry.py
app/routers/: __init__.py  ml_router.py
app/schemas/: request.py  response.py
mlruns/0/: meta.yaml
