[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
mlflow = "1.27.0"
boto3 = "^1.34.82"
sqlalchemy = "1.4.52"
psycopg2-binary = "^2.9.9"
scikit-learn = "^1.4.2"
pandas = "^2.2.2"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
